# embed-rs

./: .gitignore  Cargo.toml  README.md
firmware/: Makefile  README.md
firmware-cpp/: CMakeLists.txt  README.md  linker.ld
firmware-cpp/include/: adc.hpp  gpio.hpp  stm32f103.hpp  system.hpp  timer.hpp  uart.hpp
firmware-cpp/src/: adc.cpp  gpio.cpp  main.cpp  system.cpp  timer.cpp  uart.cpp
firmware-rust/: Cargo.toml  README.md
firmware-rust/.cargo/: config.toml
firmware-rust/src/: main.rs
firmware/include/: adc.h  gpio.h  stm32f103.h  system.h  timer.h  uart.h
firmware/src/: adc.c  gpio.c  main.c  startup.c  system.c  timer.c  uart.c
firmware/wokwi/: diagram.json  wokwi.toml
src/: main.rs
